--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ git2 = "0.20.3"
 rayon = "1.11.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+tabled = "0.20.0"
 thiserror = "2.0.17"
 walkdir = "2.5.0"
