feat: core functionality complete with AI summaries, atomic storage, and tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ description = "A CLI tool to generate daily reports for agile meetings from git 
 anyhow = "1.0.100"
 chrono = { version = "0.4.42", features = ["serde"] }
 clap = { version = "4.5.54", features = ["derive"] }
+confy = "2.0.0"
 directories = "6.0.0"
+reqwest = { version = "0.13.1", features = ["json", "blocking"] }
 git2 = "0.20.3"
 rayon = "1.11.0"
 serde = { version = "1.0.228", features = ["derive"] }
@@ -17,3 +19,8 @@ serde_json = "1.0.149"
 tabled = "0.20.0"
 thiserror = "2.0.17"
 walkdir = "2.5.0"
+colored = "3.0.0"
+tempfile = "3.24.0"
+
+[dev-dependencies]
+tempfile = "3.24.0"
